@@ -1,3 +1,6 @@
+* Reports Break: rewrite introduced a regression in date select that prevented
+  data from being fetched if the start and end date are the same. Fixed. Should
+  fix Elastix bug #360.
 * Dialer: fix accessing of undefined Uniqueid variable in OnDial event.
 * Agent Console: recognize call attributes that are HTTP URLs, and display them
   as hyperlinks.
